# python-standalone-binary

./: .gitignore  LICENSE  README.md  build.sh  dev-setup.sh  install.sh  pyproject.toml  requirements.txt  test.sh
.github/workflows/: devto.yml  release.yml
docs/: _config.yml  development.md  index.md  installation.md  troubleshooting.md
docs/post/: medium_post.md
docs/posts/: dev_post.md  medium_post.md
docs/user-rouph/: README.md  blog.md  compatibility.md  dependencies.md  local_test.md  overview.md  release_and_install.md  root_readme.md
scripts/: install.ps1  tagging.sh
src/example_cli/: __init__.py  cli.py
